mejoras en consultas y rutas api
- perfiles
- cargos
- categorias
- empresas
- enlaces
- localidades - municipios
- personas
- roles
- rubros
- subrubros
- usuarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,7 @@ spring.mail.properties.mail.smtp.auth=true
 
 path.archivos=/opt/reactivaticapp/
 
+path.archivos.windows=C:/reactivaticapp/
+path.archivos.linux=/opt/reactivaticapp/
+
 #path.archivos=/home/cesarnvf/mipymesapp/
