revision y correccion de modulos, servicios y entidades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,16 @@ spring.mail.password=djEA45d%2erdj
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+
+# Configura el proxy HTTP
+# java.net.useSystemProxies=true
+# http.proxyHost=192.168.128.24
+# http.proxyPort=3130
+# https.proxyHost=tu-proxy.com
+# https.proxyPort=puerto-del-proxy
 
 #openssl  pkcs12 -export -in fullchain.pem -inkey privkey.pem -out keystore.p12 -name tomcat -CAfile chain.pem -caname root
 # server.port=8443
