arreglo de errores en creacion de directorios, reorganizacion de directorios, consultas de beneficioempresa

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=postgres
 spring.datasource.password=123qwe
 #spring.datasource.password=RH1x3fNo0b
 
+spring.jackson.time-zone=America/La_Paz
+spring.jpa.properties.hibernate.jdbc.time_zone=America/La_Paz
+
 spring.application.name=reactivaticapp
 server.port=8678
 
@@ -31,16 +34,9 @@ spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 
-# Configura el proxy HTTP
-# java.net.useSystemProxies=true
-# http.proxyHost=192.168.128.24
-# http.proxyPort=3130
-# https.proxyHost=tu-proxy.com
-# https.proxyPort=puerto-del-proxy
-
-#openssl  pkcs12 -export -in fullchain.pem -inkey privkey.pem -out keystore.p12 -name tomcat -CAfile chain.pem -caname root
+#openssl pkcs12 -export -in /etc/letsencrypt/live/reactivatic.oruro.gob.bo/fullchain.pem -inkey /etc/letsencrypt/live/reactivatic.oruro.gob.bo/privkey.pem -out /etc/letsencrypt/live/reactivatic.oruro.gob.bo/keystore.p12 -name tomcat -CAfile /etc/letsencrypt/live/reactivatic.oruro.gob.bo/chain.pem -caname root
 # server.port=8443
-# server.ssl.key-store=/etc/letsencrypt/live/desarrolla.oruro.gob.bo/keystore.p12
+# server.ssl.key-store=/etc/letsencrypt/live/reactivatic.oruro.gob.bo/keystore.p12
 # server.ssl.key-store-password=%djEA45d%2er%
 # server.ssl.keyStoreType=PKCS12
 # server.ssl.keyAlias=tomcat
