arreglo de pequeños errores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 
-#openssl pkcs12 -export -in /etc/letsencrypt/live/reactivatic.oruro.gob.bo/fullchain.pem -inkey /etc/letsencrypt/live/reactivatic.oruro.gob.bo/privkey.pem -out /etc/letsencrypt/live/reactivatic.oruro.gob.bo/keystore.p12 -name tomcat -CAfile /etc/letsencrypt/live/reactivatic.oruro.gob.bo/chain.pem -caname root
+# sudo openssl pkcs12 -export -in /etc/letsencrypt/live/reactivatic.oruro.gob.bo/fullchain.pem -inkey /etc/letsencrypt/live/reactivatic.oruro.gob.bo/privkey.pem -out /etc/letsencrypt/live/reactivatic.oruro.gob.bo/keystore.p12 -name tomcat -CAfile /etc/letsencrypt/live/reactivatic.oruro.gob.bo/chain.pem -caname root
 # server.port=8443
 # server.ssl.key-store=/etc/letsencrypt/live/reactivatic.oruro.gob.bo/keystore.p12
 # server.ssl.key-store-password=%djEA45d%2er%
