--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/reactivaticdb
 spring.datasource.username=postgres
 spring.datasource.password=123qwe
-# spring.datasource.password=RH1x3fNo0b
 
 spring.jackson.time-zone=America/La_Paz
 spring.jpa.properties.hibernate.jdbc.time_zone=America/La_Paz
@@ -20,13 +19,13 @@ spring.banner.location=reactivatic.txt
 server.servlet.context-path=/reactivaticapp
 
 security.oauth2.client.client-id=reactivaticapp
-security.oauth2.client.client-secret=djEA45d%2er
-security.oauth2.resource.jwt.key-value=djEA45d%2erdjEA45d%2er
+security.oauth2.client.client-secret=clavesecreta
+security.oauth2.resource.jwt.key-value=JwtkeyValue
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=mipymesoruroingesoft@gmail.com
-spring.mail.password=djEA45d%2erdj
+spring.mail.password=Clavecorreo
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
@@ -34,12 +33,6 @@ spring.mail.properties.mail.smtp.connectiontimeout=10000
 spring.mail.properties.mail.smtp.timeout=10000
 spring.mail.properties.mail.smtp.writetimeout=10000
 
-# sudo openssl pkcs12 -export -in /etc/letsencrypt/live/reactivatic.oruro.gob.bo/fullchain.pem -inkey /etc/letsencrypt/live/reactivatic.oruro.gob.bo/privkey.pem -out /etc/letsencrypt/live/reactivatic.oruro.gob.bo/keystore.p12 -name tomcat -CAfile /etc/letsencrypt/live/reactivatic.oruro.gob.bo/chain.pem -caname root
-# server.port=8443
-# server.ssl.key-store=/etc/letsencrypt/live/reactivatic.oruro.gob.bo/keystore.p12
-# server.ssl.key-store-password=%djEA45d%2er%
-# server.ssl.keyStoreType=PKCS12
-# server.ssl.keyAlias=tomcat
 
 path.archivos=/opt/reactivaticapp/
 
